--- a/app/src/main/res/layout/fragment_skills.xml
+++ b/app/src/main/res/layout/fragment_skills.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/Pri1_Inke"
-    tools:context="com.drxid.porto.menufragment.SkillsFragment">
+    tools:context=".menufragment.SkillsFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
