--- a/app/src/main/res/layout/fragment_projects.xml
+++ b/app/src/main/res/layout/fragment_projects.xml
@@ -49,6 +49,11 @@
                     app:tabSelectedTextColor="@color/style_tab_selector"
                     app:tabMode="fixed"/>
 
+                <androidx.viewpager2.widget.ViewPager2
+                    android:id="@+id/viewPager2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+
             </LinearLayout>
 
         </LinearLayout>
