--- a/app/src/main/res/layout/item_list_projects_website.xml
+++ b/app/src/main/res/layout/item_list_projects_website.xml
@@ -30,6 +30,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/website_projects_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Name Project"
@@ -39,6 +40,7 @@
                 />
 
             <TextView
+                android:id="@+id/website_projects_job"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
@@ -48,6 +50,7 @@
                 android:textSize="12sp" />
 
             <TextView
+                android:id="@+id/website_projects_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
